# generic-field-projection

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pr-fmt.yml  pr-test-core.yml  pr-test.yml  test.yml
core/: Cargo.toml  Makefile.toml  build.rs
core/src/: chain.rs  descriptor.rs  dynamic.rs  field_type.rs  lib.rs  macros.rs  pin.rs  project.rs  project_set.rs  set.rs  type_list.rs  unchecked_project.rs
core/src/project/: from_arc.rs  from_box.rs  from_mut.rs  from_pin.rs  from_rc.rs  from_ref.rs
core/src/set/: func.rs  tuple.rs
core/src/type_list/: any.rs  call.rs  fold.rs  map.rs  zip.rs
core/tests/: inverse.rs  test_core.rs  test_list.rs  test_set.rs  unchecked.rs  union.rs
derive/: Cargo.toml  Makefile.toml
derive/src/: lib.rs
derive/tests/: simple.rs  union.rs
intrusive_collections_examples/: Cargo.toml  README.md
intrusive_collections_examples/src/: main.rs
intrusive_collections_examples/src/basic_datastructures/: mod.rs  red_black_tree.rs  singly_linked_list.rs
intrusive_collections_examples/src/lessons/: mod.rs
temp/: Cargo.toml
temp/src/: lib.rs
