[package]
name = "gfp-core"
version = "0.0.1"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

no_std = []
alloc = []

[dev-dependencies]
static-alloc = '*'

[dependencies]
gfp-derive = { path = '../derive' }